--- a/methane.solv/template/tools/gen.ch4/Makefile
+++ b/methane.solv/template/tools/gen.ch4/Makefile
@@ -36,13 +36,13 @@ cobjects = 	$(addprefix $(cobjects_dir)/,$(tmp_cobjects))
 
 
 C:=		gcc
-CFLAGS +=	-g -O3 -Wall 
+CFLAGS +=	-g -O0 -Wall 
 CFLAGS += 	$(addprefix -I ,$(include_dirs))
 
 CXX:=		g++
 CXXFLAGS += 	$(CFLAGS)
 
-target:		$(application_target)
+target:		makedir $(application_target)
 
 %:	$(cobjects) $(cppobjects) $(application_dir)/%.o
 	$(call make-target,$@,$^)
